blocks/gallery/gallery.css
.gallery .gallery-image {
  display: flex;
  justify-content: center;
  max-height: 550px;
  position: relative;
}

.gallery .gallery-image img {
  object-fit: contain;
}

.gallery .gallery-image::before {
  padding-bottom: 100%;
  display: block;
  height: 0;
  width: 100%;
  content: "";
  box-sizing: border-box;
}

.gallery .gallery-image img {
  aspect-ratio: 1 / 1;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.gallery .slide-container {
  display: flex;
  flex-wrap: wrap;
  gap: 10px;
  padding: 15px;
  justify-content: center;
}

.gallery .slide-container .gallery-slide {
  width: 90px;
  background-color: #fff;
  border: 1px solid #d9d9d9;
  box-sizing: content-box;
  border-radius: 5px;
  overflow: hidden;
}

.gallery .slide-container .gallery-slide.selected {
  border: 2px solid #000;
}

.gallery .slide-container .gallery-slide picture {
  display: flex;
}

@media (min-width: 900px) {
  .gallery .gallery-image {
    width: 100%;
    justify-content: space-around;
    padding: 20px 0;
  }

  .gallery .gallery-image img {
    width: auto;
    height: 100%;
  }
}

